--- a/calculo de hipoteca.ipynb
+++ b/calculo de hipoteca.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrQR/Y1Gwj53ZtzYVqCdEg",
+      "authorship_tag": "ABX9TyNjurSl6FO7+4kBRkHhUTWv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,26 +82,23 @@
     {
       "cell_type": "code",
       "source": [
-        "Pago_mensual"
+        "print(f'el pago mensual es {Pago_mensual}')"
       ],
       "metadata": {
-        "id": "z538Z_hPjGV-",
-        "outputId": "467a1d2d-576b-449d-e6a2-f48f58463ce2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "z538Z_hPjGV-",
+        "outputId": "713ef286-029a-4c08-bc4b-734e62b4185e"
       },
-      "execution_count": 60,
+      "execution_count": 63,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1686.4161349178237"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 60
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "el pago mensual es 1686.4161349178237\n"
+          ]
         }
       ]
     },
@@ -117,11 +114,11 @@
         "Pago_mensual2"
       ],
       "metadata": {
-        "id": "CXJBfmVOlsPg",
-        "outputId": "2fec7c46-9007-4e2c-c83f-049054323510",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CXJBfmVOlsPg",
+        "outputId": "2fec7c46-9007-4e2c-c83f-049054323510"
       },
       "execution_count": 61,
       "outputs": [
@@ -139,9 +136,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(f'el pago mensual es {Pago_mensual2}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fYjN9Mo5nK5j",
+        "outputId": "7a9060a3-e982-4361-9121-9c8101178320"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "el pago mensual es 2398.2021006110276\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "fYjN9Mo5nK5j"
+        "id": "x7Jgiw1YoNfb"
       },
       "execution_count": null,
       "outputs": []
